# GameEngine

./: .gitignore  IPC Project.sln
IPC Project/: CMakeLists.txt  IPC Project.vcxproj  IPC Project.vcxproj.filters  build.bash  build.bat  build.sh  header.h  main.cpp
IPC Project/Documents/: diagram.puml  drawUML.sh
IPC Project/camera/: Camera.cpp  Camera.h
IPC Project/object/: Object.cpp  Object.h
IPC Project/object/cube/: Cube.cpp  Cube.h
IPC Project/shader/: Shader.cpp  Shader.h
IPC Project/shader/shader/: fragmentShader.shader
IPC Project/source/: CMakeLists.txt  header.h  main.cpp
IPC Project/source/Add/: CMakeLists.txt
IPC Project/source/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraDebug.cpp  CameraDebug.h
IPC Project/source/object/: CMakeLists.txt  Object.cpp  Object.h
IPC Project/source/object/DebugLines/: CMakeLists.txt  DebugLine.cpp  DebugLine.h
IPC Project/source/object/cube/: CMakeLists.txt  Cube.cpp  Cube.h
IPC Project/source/shader/: CMakeLists.txt  Shader.cpp  Shader.h
IPC Project/source/shader/shader/: lineFragment.glsl  lineVertex.glsl  vertexShader.glsl
IPC Project/source/textures/: CMakeLists.txt  Texture.cpp
IPC Project/textures/: Texture.cpp  Texture.h
